--- a/shop.html
+++ b/shop.html
@@ -967,8 +967,6 @@
         </div>
     </header>
 
-
-
     <section id="whereiam">
         <div class="container">
             <div class="row all">
@@ -1141,16 +1139,16 @@
                         </div>
                     </div>
 
-                    <div class="middle">
+                    <div class="middle col-lg-12">
 
-                        <div class="left left_sort col-lg-1">
+                        <div class="leftt left_sort col-lg-3">
                             <i class="klbth-icon-list-grid listkimi"></i>
                             <i class="klbth-icon-2-grid ikikimi"></i>
                             <i class="klbth-icon-3-grid uckimi"></i>
                             <i class="klbth-icon-4-grid dordkimi"></i>
                         </div>
 
-                        <div class="right col-lg-3-5 col-12">
+                        <div class="rightt col-lg-4 col-12">
 
                             <div class="first col-4" id="sortby">
                                 <span class="media_none">
@@ -1166,14 +1164,13 @@
                                             <span>Sort By price: High to Low</span>
                                         </div>
                                     </div>
-
                                 </span>
 
                                 <span class="filter_by">Filter BY</span>
                             </div>
 
                             <div class="second col-3" id="datasort">
-                                <span>
+                                <span class="datalarisaxlayan">
                                     Show
                                     <span class="show12">12</span>
                                     <i class="fa-solid fa-angle-down"></i>
@@ -1186,8 +1183,6 @@
                                             <span>48</span>
                                         </div>
                                     </div>
-
-
                                 </span>
                             </div>
 
